--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  
 <body>
-  <h1>LOL/h1>
+  <h1>LOL</h1>
   <p>Boop de doop de dooop</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
